--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -176,6 +176,11 @@ add_executable(pedestal ${PROJECT_SOURCE_DIR}/src/pedestal.cxx)
 target_link_libraries(pedestal ${ROOT_LIBRARIES} ${LYCORIS_LIBRARIES} ${LIBXML2_LIBRARIES} Dict)
 list(APPEND INSTALL_EXE_TARGETS pedestal)
 
+add_executable(pedestal_tree ${PROJECT_SOURCE_DIR}/src/pedestal_tree.cxx)
+target_link_libraries(pedestal_tree ${ROOT_LIBRARIES} ${LYCORIS_LIBRARIES} ${LIBXML2_LIBRARIES} Dict)
+list(APPEND INSTALL_EXE_TARGETS pedestal_tree)
+
+
 # tree builders:
 
 add_executable(ntupleTest ${PROJECT_SOURCE_DIR}/src/ntupleTest.cxx)
