added sensor specific parametrization to TBFunctions. Did some minor changes to analysisExtern_tree.cxx and reworked cluster_analysis.cxx to be the basis of my testbeam analysis concerning tracking and clustering

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,13 +168,13 @@ add_executable(cluster_analysis ${PROJECT_SOURCE_DIR}/src/cluster_analysis.cxx)
 target_link_libraries(cluster_analysis ${ROOT_LIBRARIES} ${LYCORIS_LIBRARIES} ${LIBXML2_LIBRARIES} Dict)
 list(APPEND INSTALL_EXE_TARGETS cluster_analysis)
 
-add_executable(analysisExternal ${PROJECT_SOURCE_DIR}/src/analysisExternal.cxx)
-target_link_libraries(analysisExternal ${ROOT_LIBRARIES} ${LYCORIS_LIBRARIES} ${LIBXML2_LIBRARIES} Dict)
-list(APPEND INSTALL_EXE_TARGETS analysisExternal)
+#add_executable(analysisExternal ${PROJECT_SOURCE_DIR}/src/analysisExternal.cxx)
+#target_link_libraries(analysisExternal ${ROOT_LIBRARIES} ${LYCORIS_LIBRARIES} ${LIBXML2_LIBRARIES} Dict)
+#list(APPEND INSTALL_EXE_TARGETS analysisExternal)
 
-#add_executable(analysisExternal_tree ${PROJECT_SOURCE_DIR}/src/analysisExternal_tree.cxx)
-#target_link_libraries(analysisExternal_tree ${ROOT_LIBRARIES} ${LYCORIS_LIBRARIES} ${LIBXML2_LIBRARIES} Dict)
-#list(APPEND INSTALL_EXE_TARGETS analysisExternal_tree)
+add_executable(analysisExternal_tree ${PROJECT_SOURCE_DIR}/src/analysisExternal_tree.cxx)
+target_link_libraries(analysisExternal_tree ${ROOT_LIBRARIES} ${LYCORIS_LIBRARIES} ${LIBXML2_LIBRARIES} Dict)
+list(APPEND INSTALL_EXE_TARGETS analysisExternal_tree)
 
 #add_executable(pedestal ${PROJECT_SOURCE_DIR}/src/pedestal.cxx)
 #target_link_libraries(pedestal ${ROOT_LIBRARIES} ${LYCORIS_LIBRARIES} ${LIBXML2_LIBRARIES} Dict)
