modification to use latest analysis and kpix classes for eudaq2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,11 +71,17 @@ include_directories( ${LIBXML2_INCLUDE_DIR} )
 ##-- Extern Packages to install prior
 if (USE_KPIX)
   message(" [INFO] local KPiX lite package used.")
-  set(KPIX_LOCAL_LIB extern) 
+  set(KPIX_LOCAL_LIB kpix) 
   include_directories( ${PROJECT_SOURCE_DIR}/extern/include)
   
   aux_source_directory( ${PROJECT_SOURCE_DIR}/extern/src LIB_SRC)
   add_library(${KPIX_LOCAL_LIB} SHARED ${LIB_SRC})
+
+  # start of adding files to usr/local
+  file(GLOB KPIX_HEADER "${PROJECT_SOURCE_DIR}/extern/include/*.h" )
+  install(FILES ${KPIX_HEADER} DESTINATION /usr/local/include/kpix)
+  install(TARGETS ${KPIX_LOCAL_LIB} LIBRARY DESTINATION /usr/local/lib/kpix)
+  # end of adding files to usr/local
   
   install(TARGETS ${KPIX_LOCAL_LIB} LIBRARY DESTINATION lib)
   # file(GLOB INC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/include/eudaq/*.hh")
@@ -102,7 +108,7 @@ endif()
 
 ##-- LinkDef.h
 include(${ROOT_USE_FILE})
-message("\tDebug: ${ROOT_USE_FILE}")
+#message("\tDebug: ${ROOT_USE_FILE}")
 ROOT_GENERATE_DICTIONARY(G__Dict ${PROJECT_SOURCE_DIR}/include/ntupleMaker.h LINKDEF  ${PROJECT_SOURCE_DIR}/include/LinkDef.h)
 
 add_library(Dict SHARED G__Dict.cxx)
@@ -197,5 +203,5 @@ list(APPEND INSTALL_EXE_TARGETS ntupleTest)
 # install 
 install(
  TARGETS ${INSTALL_EXE_TARGETS}
- RUNTIME DESTINATION bin 
+ RUNTIME DESTINATION bin
  )
