--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -241,9 +241,9 @@ add_executable(cluster_analysis ${PROJECT_SOURCE_DIR}/src/cluster_analysis.cxx)
 target_link_libraries(cluster_analysis ${ROOT_LIBRARIES} ${LYCORIS_LIBRARIES} ${LIBXML2_LIBRARIES} Dict)
 list(APPEND INSTALL_EXE_TARGETS cluster_analysis)
 
-add_executable(noise_analysis ${PROJECT_SOURCE_DIR}/src/noise_analysis.cxx)
-target_link_libraries(noise_analysis ${ROOT_LIBRARIES} ${LYCORIS_LIBRARIES} ${LIBXML2_LIBRARIES} Dict)
-list(APPEND INSTALL_EXE_TARGETS noise_analysis)
+# add_executable(noise_analysis ${PROJECT_SOURCE_DIR}/src/noise_analysis.cxx)
+# target_link_libraries(noise_analysis ${ROOT_LIBRARIES} ${LYCORIS_LIBRARIES} ${LIBXML2_LIBRARIES} Dict)
+# list(APPEND INSTALL_EXE_TARGETS noise_analysis)
 
 add_executable(cluster_analysis_step2 ${PROJECT_SOURCE_DIR}/src/cluster_analysis_step2.cxx)
 target_link_libraries(cluster_analysis_step2 ${ROOT_LIBRARIES} ${LYCORIS_LIBRARIES} ${LIBXML2_LIBRARIES} Dict)
