--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ cmake/
 *.so
 *.o
 *.log
+*.png
+*.pdf
 bin/
 ChangeLog
 .cproject
@@ -18,6 +20,7 @@ txt
 lib/
 build/
 data/*txt
+output/
 
 include/kpix_left.hplot_script.sh
 threshold_scan_script.sh
@@ -28,3 +31,38 @@ threshold_scan_script.sh
 SLAC_plot_script.sh
 channel_list_noise.txt
 run.sh
+python/extract.py
+python/extractIVCV.py
+python/pyplot.py
+python/read_column.py
+python/read_disabler.py
+python/test.py
+python/test_time.dat
+python/timepix_compare.py
+scripts/cosmic_analyze.sh
+scripts/eutelDocker.sh
+scripts/lab_test_acq_clock_compare.sh
+scripts/single_channel_noise_compare.sh
+scripts/tb022019_day_to_day_calib_changes.sh
+scripts/tb201905/ext_analyse_data_script.sh
+scripts/tb201905/ext_analyse_debug_script.sh
+scripts/tb201905/ext_plot_debug_script.sh
+scripts/tb201907/
+scripts/thesis/charge_calib_plots.sh
+scripts/thesis/pedestal_plots.sh
+scripts/thesis/script_list.sh
+scripts/thesis/track_plots.sh
+CMakeLists.txt.user
+core/CMakeLists.txt.autosave
+core/include/AutoDict_clustr.cxx
+core/include/AutoDict_clustr_cxx.d
+data/testbeam202003/
+include/special_channels.txt
+include/zero_channels.txt
+python/6090_lyc_triggers.txt
+python/CV_fit.py
+python/__pycache__/
+src/new_cluster_analysis_cxx.d
+syncPlots.sh
+test.txt
+test_time.dat
